Fix session wrap.

--- a/src/app/app.less
+++ b/src/app/app.less
@@ -17,6 +17,11 @@ body {
   user-select: none;
 }
 
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
 #toast {
   background-color: red;
   color: white;
